; ModuleID = '/home/carl/AnghaBench/ish/emu/extr_tlb.c_tlb_init.c'
source_filename = "/home/carl/AnghaBench/ish/emu/extr_tlb.c_tlb_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tlb = type { i32, %struct.mem* }
%struct.mem = type { i32 }

@TLB_PAGE_EMPTY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tlb_init(%struct.tlb* %0, %struct.mem* %1) #0 {
  %3 = alloca %struct.tlb*, align 8
  %4 = alloca %struct.mem*, align 8
  store %struct.tlb* %0, %struct.tlb** %3, align 8
  store %struct.mem* %1, %struct.mem** %4, align 8
  %5 = load %struct.mem*, %struct.mem** %4, align 8
  %6 = load %struct.tlb*, %struct.tlb** %3, align 8
  %7 = getelementptr inbounds %struct.tlb, %struct.tlb* %6, i32 0, i32 1
  store %struct.mem* %5, %struct.mem** %7, align 8
  %8 = load i32, i32* @TLB_PAGE_EMPTY, align 4
  %9 = load %struct.tlb*, %struct.tlb** %3, align 8
  %10 = getelementptr inbounds %struct.tlb, %struct.tlb* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 8
  %11 = load %struct.tlb*, %struct.tlb** %3, align 8
  %12 = call i32 @tlb_flush(%struct.tlb* %11)
  ret void
}

declare dso_local i32 @tlb_flush(%struct.tlb*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
